--- a/practice/Cargo.toml
+++ b/practice/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.52"
-chrono = { version ="0.4", features=["serde"]}
+chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.15.0", features = ["full"] }
