--- a/practice/Cargo.toml
+++ b/practice/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "toki"
+path = "src/bin/toki.rs"
+
 [dependencies]
 anyhow = "1.0.52"
 chrono = { version = "0.4", features = ["serde"] }
