--- a/practice/Cargo.toml
+++ b/practice/Cargo.toml
@@ -16,9 +16,10 @@ path = "src/bin/nixs.rs"
 [dependencies]
 anyhow = "1.0.51"
 chrono = { version = "0.4", features = ["serde"] }
+crossbeam = "0.8.1"
+futures = "0.3.21"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.15.0", features = ["full"] }
 nix = "0.23.1"
 libc = "0.2.112"
-mini-redis = "0.4"
