--- a/practice/Cargo.toml
+++ b/practice/Cargo.toml
@@ -28,3 +28,5 @@ serde_json = "1.0"
 tokio = { version = "1.20", features = ["full"] }
 nix = "0.25"
 libc = "0.2"
+reqwest = { version = "0.11", features = ["blocking"] }
+html2md = "0.2"
