--- a/practice/Cargo.toml
+++ b/practice/Cargo.toml
@@ -27,7 +27,8 @@ rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.17", features = ["full"] }
-nix = "0.23"
+nix = "0.25"
 libc = "0.2"
 reqwest = { version = "0.11", features = ["blocking"] }
 html2md = "0.2"
+regex = "1.6"
