--- a/practice/Cargo.toml
+++ b/practice/Cargo.toml
@@ -29,6 +29,7 @@ serde_json = "1.0"
 tokio = { version = "1.17", features = ["full"] }
 nix = "0.25"
 libc = "0.2"
+lazy_static = "1.4"
 reqwest = { version = "0.11", features = ["blocking"] }
 html2md = "0.2"
 regex = "1.6"
