--- a/practice/Cargo.toml
+++ b/practice/Cargo.toml
@@ -23,6 +23,7 @@ chrono = { version = "0.4", features = ["serde"] }
 crossbeam = "0.8"
 dashmap = "5.1"
 futures = "0.3"
+itertools = "0.10"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
