--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,34 @@
-[workspace]
-members = ["miniredis", "practice"]
+[package]
+name = "little_rust"
+version = "0.1.0"
+authors = ["azusachino <azusa146@gmail.com>"]
+edition = "2021"
+readme = "README.md"
+license-file = "LICENSE"
+repository = "https://github.com/azusachino/little-rust"
 
-[profile.release]
-lto = true
-codegen-units = 1
+[[bin]]
+name = "toki"
+path = "src/bin/toki.rs"
+
+[[bin]]
+name = "nixs"
+path = "src/bin/nixs.rs"
+
+[dependencies]
+anyhow = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+crossbeam = "0.8"
+dashmap = "5.4"
+futures = "0.3"
+itertools = "0.10"
+rand = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1.25", features = ["full"] }
+nix = "0.26"
+libc = "0.2"
+lazy_static = "1.4"
+reqwest = { version = "0.11", features = ["blocking"] }
+html2md = "0.2"
+regex = "1.7"
