--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,5 +38,6 @@ html2md = "0.2"
 regex = "1.7"
 walkdir = "2.3"
 glob = "0.3"
-csv = "1.2.0"
-toml = "0.7.2"
+csv = "1.2"
+toml = "0.7"
+bitflags = "1.3"
