--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ clap = { version = "4.1", features = ["derive"] }
 crossbeam = "0.8"
 dashmap = "5.4"
 futures = "0.3"
+futures-util = "0.3"
 itertools = "0.10"
 openssl = "0.10"
 rand = "0.8"
