--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,11 +26,11 @@ dashmap = "5.4"
 futures = "0.3"
 futures-util = "0.3"
 itertools = "0.10"
-openssl = "0.10"
+openssl = { version = "0.10", features = ["vendored"] }
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.25", features = ["full"] }
+tokio = { version = "1.27", features = ["full"] }
 nix = "0.26"
 libc = "0.2"
 lazy_static = "1.4"
@@ -41,7 +41,7 @@ walkdir = "2.3"
 glob = "0.3"
 csv = "1.2"
 toml = "0.7"
-bitflags = "1.3"
+bitflags = "2.1"
 env_logger = "0.10"
 log = "0.4"
-rayon = "1.6"
+rayon = "1.7"
