--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ dashmap = "5.4"
 futures = "0.3"
 futures-util = "0.3"
 itertools = "0.10"
+io-uring = "0.6"
 openssl = { version = "0.10", features = ["vendored"] }
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
@@ -33,7 +34,7 @@ serde_json = "1.0"
 tokio = { version = "1.27", features = ["full"] }
 nix = "0.26"
 libc = "0.2"
-lazy_static = "1.4"
+once_cell = "1.17"
 reqwest = { version = "0.11", features = ["blocking"] }
 html2md = "0.2"
 regex = "1.7"
