--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/bin/nixs.rs"
 
 [dependencies]
 anyhow = "1.0"
+bytes = "1.4"
 base64 = "0.21"
 byteorder = "1.4"
 chrono = { version = "0.4", features = ["serde"] }
@@ -25,6 +26,7 @@ crossbeam = "0.8"
 dashmap = "5.4"
 futures = "0.3"
 futures-util = "0.3"
+hyper = { version = "0.14", features = ["full"] }
 itertools = "0.10"
 io-uring = "0.6"
 openssl = { version = "0.10", features = ["vendored"] }
@@ -32,9 +34,7 @@ rand = "0.8"
 sled = "0.34"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.27", features = ["full"] }
-nix = "0.26"
-libc = "0.2"
+tokio = { version = "1.28", features = ["full"] }
 once_cell = "1.17"
 reqwest = { version = "0.11", features = ["blocking"] }
 html2md = "0.2"
@@ -47,3 +47,15 @@ bitflags = "2.1"
 env_logger = "0.10"
 log = "0.4"
 rayon = "1.7"
+
+# prost
+prost = "0.11"
+prost-derive = "0.11"
+prost-types = "0.11"
+
+[target.'cfg(unix)'.dependencies]
+libc = "0.2"
+nix = "0.26"
+
+[build-dependencies]
+prost-build = "0.11"
