--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,10 @@ photon-rs = "0.3"
 bytes = "1.4"
 base64 = "0.21"
 byteorder = "1.4"
+
+# hasher
+blake3 = "1.4"
+
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.3", features = ["derive"] }
 crossbeam = "0.8"
@@ -50,7 +54,9 @@ rand = "0.8"
 sled = "0.34"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.28", features = ["full"] }
+serde_yaml = "0.9"
+tokio = { version = "1.29", features = ["full"] }
+tokio-util = "0.7"
 once_cell = "1.18"
 reqwest = { version = "0.11", features = ["json"] }
 html2md = "0.2"
