--- a/rust_practice/Cargo.toml
+++ b/rust_practice/Cargo.toml
@@ -48,7 +48,6 @@ futures = "0.3"
 futures-util = "0.3"
 hyper = { version = "1.1", features = ["full"] }
 itertools = "0.12"
-io-uring = "0.6"
 openssl = { version = "0.10", features = ["vendored"] }
 rand = "0.8"
 sled = "0.34"
@@ -82,9 +81,10 @@ prost-types = "0.12"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 
-[target.'cfg(unix)'.dependencies]
+[target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2"
 nix = "0.27"
+io-uring = "0.6"
 
 [build-dependencies]
 prost-build = "0.12"
