--- a/rust_practice/Cargo.toml
+++ b/rust_practice/Cargo.toml
@@ -43,7 +43,8 @@ blake3 = "1.5"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
 crossbeam = "0.8"
-dashmap = "5.5"
+crossterm = "0.27"
+dashmap = "6.0"
 futures = "0.3"
 futures-util = "0.3"
 hyper = { version = "1", features = ["full"] }
