--- a/rust_practice/Cargo.toml
+++ b/rust_practice/Cargo.toml
@@ -9,12 +9,15 @@ repository = "https://github.com/azusachino/little-rust"
 build = "build.rs"
 
 [[bin]]
-name = "toki"
-path = "src/bin/toki.rs"
+name = "routeguide-server"
+path = "src/grpc/routeguide/server.rs"
+required-features = ["routeguide"]
 
 [[bin]]
-name = "nixs"
-path = "src/bin/nixs.rs"
+name = "routeguide-client"
+path = "src/grpc/routeguide/client.rs"
+required-features = ["routeguide"]
+
 
 [dependencies]
 anyhow = "1"
@@ -49,14 +52,15 @@ futures = "0.3"
 futures-util = "0.3"
 hyper = { version = "1", features = ["full"] }
 itertools = "0.13"
-rand = "0.8"
+rand = { version = "0.8", default-features = false }
 sled = "0.34"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 tokio = { version = "1", features = ["full"] }
 tokio-util = "0.7"
-tokio-uring = "0.5"
+async-stream = { version = "0.3", optional = true }
+tokio-stream = { version = "0.1", optional = true }
 once_cell = "1.19"
 reqwest = { version = "0.12", features = ["json"] }
 html2md = "0.2"
@@ -72,31 +76,29 @@ rayon = "1.10"
 dotenv = "0.15"
 
 # telemetry
-opentelemetry = "0.23"
-opentelemetry_sdk = { version = "0.23", features = ["trace", "rt-tokio"] }
-opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
-opentelemetry-semantic-conventions = "0.15"
+opentelemetry = "0.24"
+opentelemetry_sdk = { version = "0.24", features = ["trace", "rt-tokio"] }
+opentelemetry-otlp = { version = "0.17", features = ["tonic"] }
+opentelemetry-semantic-conventions = "0.16"
 
 # tower
 tower = { version = "0.4", features = ["full"] }
 tower-http = { version = "0.5", features = ["full"] }
 
 # prost
-prost = "0.12"
-prost-derive = "0.12"
-prost-types = "0.12"
+prost = "0.13"
+prost-derive = "0.13"
+prost-types = "0.13"
 
 # logging
 tracing = "0.1"
-tracing-core ="0.1"
+tracing-core = "0.1"
 tracing-subscriber = "0.3"
-tracing-opentelemetry = "0.24"
-
-[target.'cfg(target_os = "linux")'.dependencies]
-libc = "0.2"
-nix = "0.29"
-io-uring = "0.6"
-openssl = { version = "0.10", features = ["vendored"] }
+tracing-opentelemetry = "0.25"
 
 [build-dependencies]
-prost-build = "0.12"
+prost-build = "0.13"
+tonic-build = "0.12"
+
+[features]
+routeguide = ["dep:async-stream", "tokio-stream"]
