--- a/rust_practice/Cargo.toml
+++ b/rust_practice/Cargo.toml
@@ -46,7 +46,8 @@ blake3 = "1.5"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
 crossbeam = "0.8"
-crossterm = "0.27"
+crossbeam-channel = "0.5"
+crossterm = "0.28"
 dashmap = "6.0"
 futures = "0.3"
 futures-util = "0.3"
@@ -95,6 +96,9 @@ tracing = "0.1"
 tracing-core = "0.1"
 tracing-subscriber = "0.3"
 tracing-opentelemetry = "0.25"
+
+[target.'cfg(unix)'.dependencies]
+openssl = "0.10"
 
 [build-dependencies]
 prost-build = "0.13"
